--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,7 @@
 @import "./style/variables";
 @import "./style/grid";
 @import "./style/fonts";
+@import "./style/responsive";
 
 // Import Components
 @import "./components/header/header";
